force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/ClickSendSMS__ClickSend_SMS_Log__c.object-meta.xml
<CustomObject>
    <label>ClickSend SMS Log</label>
    <nameField>
        <displayFormat>CSL-{00000}</displayFormat>
        <label>Clicksend SMS Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickSend SMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>