force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__AccountId__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ClickSend SMS Logs</relationshipLabel>
    <relationshipName>ClickSend_SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>