force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Clicksend SMS Logs</relationshipLabel>
    <relationshipName>Clicksend_SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>