force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__Contact__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Clicksend_SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>