force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__Lead__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Clicksend_SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>