force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__Message__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>