force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__MessageType__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__MessageType__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>