force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>