force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__RecordId__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__RecordId__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>