force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__To_Number__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__To_Number__c</fullName>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>