force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/ClickSendSMS__View_Record__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__View_Record__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot;+ClickSendSMS__ObjectName__c+&quot;/&quot;+ClickSendSMS__RecordId__c+&quot;/view&quot;,ClickSendSMS__RecordId__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Record</label>
    <type>Text</type>
</CustomField>