force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>ClickSend SMS Logs</relationshipLabel>
    <relationshipName>ClickSend_SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>