force-app/main/default/objects/ClickSendSMS__ClickSend_SMS_Log__c/listViews/ClickSendSMS__All.listView-meta.xml
<ListView>
    <fullName>ClickSendSMS__All</fullName>
    <columns>NAME</columns>
    <columns>ClickSendSMS__Campaign__c</columns>
    <columns>ClickSendSMS__Contact__c</columns>
    <columns>ClickSendSMS__Lead__c</columns>
    <columns>ClickSendSMS__Message__c</columns>
    <columns>ClickSendSMS__MessageType__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ClickSendSMS__To_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>